fix white-space wrapping

--- a/src/sass/partials/_grid.scss
+++ b/src/sass/partials/_grid.scss
@@ -717,10 +717,6 @@ table {
           border-width: 0;
 
           font-size: $font-size-sm;
-
-          .attachment-wrapper {
-            white-space: nowrap;
-          }
         }
       }
     }
