--- a/src/sass/partials/_notes-files-add.scss
+++ b/src/sass/partials/_notes-files-add.scss
@@ -426,6 +426,7 @@
         span {
           div {
             cursor: pointer;
+            white-space: nowrap;
 
             color: $bright-blue;
 
